welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:7: error: '=' expected but ';' found.
  while (!(getX()==getMondeLargeur()-1){
^Diagonal:27: error: ')' expected but 'while' found.
  while (getY()!=getMondeHauteur()-1){
  ^